# long-term-memory

./: pyproject.toml
memory-frontend/: config.rb  package-lock.json  package.json
memory-frontend/src/: style.css  style.css.map  style.scss
memory-frontend/src/routes/: +layout.svelte  +page.svelte  Tile.svelte
memory-frontend/src/types/: searchResponseData.ts
memory-frontend/static/scss/: style.css  style.css.map
memory_app/: main.py
memory_app/api/search/: search.py  searchresponse.py
