[tool.poetry]
name = "memory-app"
version = "0.1.0"
description = ""
authors = ["Krzysztof P <krzypluc@gmail.com>"]
readme = "README.md"
packages = [{include = "memory_app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.92.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
